# FileCamouflage

./: .gitignore  CMakeLists.txt  FileCamouflage.hpp  README.md  ThreadPool.hpp  main.cpp
